enable continue on error and handle different java version support