@@ -9,12 +9,26 @@ plugins {
 apply plugin: 'java'
 
 ext {
-    assert JavaVersion.current() == JavaVersion.VERSION_1_8: "Set JAVA_HOME to JDK 8. Current version is ${JavaVersion.current()}"
+    isJava8 = JavaVersion.current() == JavaVersion.VERSION_1_8
     jsr308 = file(new File("..")).absolutePath
-    cfPath = "${jsr308}/checker-framework"
-    cfiPath = "${jsr308}/checker-framework-inference"
+    cfPath = "${jsr308}/../projects/checker-framework"
+    cfiPath = "${jsr308}/../projects/checker-framework-inference"
     afu = "${jsr308}/annotation-tools/annotation-file-utilities"
     picoPath = "${jsr308}/immutability"
+    compilerArgsForRunningPICO = [
+            // These are required in Java 16+ because the --illegal-access option is set to deny
+            // by default.  None of these packages are accessed via reflection, so the module
+            // only needs to be exported, but not opened.
+            "--add-exports", "jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
+            "--add-exports", "jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
+            "--add-exports", "jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
+            "--add-exports", "jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
+            "--add-exports", "jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED",
+            "--add-exports", "jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
+            "--add-exports", "jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
+            "--add-exports", "jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
+            "--add-opens", "jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
+    ]
 }
 
 println '==================================='
@@ -96,7 +110,11 @@ afterEvaluate {
 
         environment "external_checker_classpath", "${picoPath}/build/classes/java/main:${picoPath}/build/resources/main"
 
-        jvmArgs "-Xbootclasspath/p:${cfiPath}/dist/javac.jar"
+        if (isJava8) {
+            jvmArgs "-Xbootclasspath/p:${cfiPath}/dist/javac.jar"
+        } else {
+            jvmArgs += compilerArgsForRunningPICO
+        }
 
         testLogging {
             // Always run the tests
